Remoção de includes ainda não utilizados

--- a/ifpb-tcc.tex
+++ b/ifpb-tcc.tex
@@ -47,11 +47,11 @@
 \include{estrutura/pre-textuais/resumo}             			   % Resumo em Português
 \include{estrutura/pre-textuais/abstract}             		           % Resumo em Inglês
 \include{estrutura/pre-textuais/listas/listas-ilustracoes/lista-figuras}   % Lista de Figuras
-\include{estrutura/pre-textuais/listas/listas-ilustracoes/lista-quadros}   % Lista de Quadros
-\include{estrutura/pre-textuais/listas/lista-tabelas}         		   % Lista de Tabelas
+%\include{estrutura/pre-textuais/listas/listas-ilustracoes/lista-quadros}   % Lista de Quadros
+%\include{estrutura/pre-textuais/listas/lista-tabelas}         		   % Lista de Tabelas
 \include{estrutura/pre-textuais/listas/lista-siglas}          		   % Lista de Abreviaturas e Siglas
-\include{estrutura/pre-textuais/listas/lista-simbolos}        		   % Lista de Símbolos
-\include{estrutura/pre-textuais/listas/listas-diversas/lista-algoritmos}   % Lista de Algoritmos
+%\include{estrutura/pre-textuais/listas/lista-simbolos}        		   % Lista de Símbolos
+%\include{estrutura/pre-textuais/listas/listas-diversas/lista-algoritmos}   % Lista de Algoritmos
 \include{estrutura/pre-textuais/sumario}               			   % Sumário
 
 \textual
@@ -59,8 +59,8 @@
 \include{estrutura/textuais/introducao}                		            % Introdução
 \include{estrutura/textuais/desenvolvimento/embasamento-teorico}        % Embasamento teórico
 \include{estrutura/textuais/desenvolvimento/atividades-realizadas}      % Veículos
-\include{estrutura/textuais/desenvolvimento/resultados}                    % Resultados
-\include{estrutura/textuais/desenvolvimento/orientacoes}                   % Capítulo com Orientações de uso do Template
+%\include{estrutura/textuais/desenvolvimento/resultados}                    % Resultados
+%\include{estrutura/textuais/desenvolvimento/orientacoes}                   % Capítulo com Orientações de uso do Template
 \include{estrutura/textuais/conclusao}                 			   % Conclusão
 
 \postextual
