Remoção de atributos não utilizados

--- a/base-referencias.bib
+++ b/base-referencias.bib
@@ -295,7 +295,6 @@
   Month                    = {ago.},
   Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
-
   Org-short                = {ABNT},
   Pages                    = {24},
   Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Refer\^encias --- Elabora{\c c}\~ao},
@@ -307,24 +306,16 @@
   Author                   = {Wilson Bissi},
   Publisher                = {Campo Digital},
   Year                     = {2007},
-
-%   Address                  = {Cidade},
-  Edition                  = {2},
-
-%   Page                     = {5},
-%   Timestamp                = {2014.09.24}
+  Address                  = {Cidade},
+  Edition                  = {2}
 }
 @Book{Sabbagh2014,
   Title                    = {Scrum},
   Author                   = {Rafael Sabbagh},
   Publisher                = {Casa do C\'odigo},
   Year                     = {2014},
-
-%   Address                  = {Cidade},
-  Edition                  = {1},
-
-%   Page                     = {5},
-%   Timestamp                = {2014.09.24}
+  Address                  = {Cidade},
+  Edition                  = {1}
 }
 
 @Book{Deitel2009,
@@ -332,10 +323,8 @@
   Author                   = {Deitel, Paul e Harvey},
   Publisher                = {Pearson},
   Year                     = {2009},
-%   Address                  = {Cidade},
-  Edition                  = {8},
-%   Page                     = {5},
-%   Timestamp                = {2014.09.24}
+  Address                  = {Cidade},
+  Edition                  = {8}
 }
 
 @Book{Cordeiro2014,
@@ -345,8 +334,7 @@
   Year                     = {2014},
   Address                  = {S\~ao Paulo},
   Edition                  = {1},
-  Page                     = {12},
-%   Timestamp                = {2014.09.24}
+  Page                     = {12}
 }
 
 @Manual{Civici2015,
@@ -356,7 +344,6 @@
   Year                     = {2015},
   Bdsk-url-1               = {https://www.primefaces.org/docs/guide/},
   Pages                    = {595},
-%   Subtitle                 = {},
   Timestamp                = {2015.04.07},
   Url                      = {https://www.primefaces.org/docs/guide/primefaces_user_guide_5_2.pdf/},
   Urlaccessdate            = {28 de janeiro de 2019}
@@ -368,10 +355,6 @@
   Journal                  = {Tribunal Regional Eleitoral da Paraíba},
   Year                     = {2017},
   Number                   = {37},
-%   Pages                    = {12--16},
-%   Volume                   = {2},
-
   Mounth                   = {junho},
-%   Subtitle                 = {proposta metodol\'{o}gica},
   Timestamp                = {2017.06.27}
 }
