Updates from Overleaf

--- a/base-referencias.bib
+++ b/base-referencias.bib
@@ -307,10 +307,8 @@
   Author                   = {Wilson Bissi},
   Publisher                = {Campo Digital},
   Year                     = {2007},
-
-%   Address                  = {Cidade},
-  Edition                  = {2},
-
+  Address                  = {Cidade},
+  Edition                  = {2}
 %   Page                     = {5},
 %   Timestamp                = {2014.09.24}
 }
@@ -319,10 +317,8 @@
   Author                   = {Rafael Sabbagh},
   Publisher                = {Casa do C\'odigo},
   Year                     = {2014},
-
-%   Address                  = {Cidade},
-  Edition                  = {1},
-
+  Address                  = {Cidade},
+  Edition                  = {1}
 %   Page                     = {5},
 %   Timestamp                = {2014.09.24}
 }
@@ -332,8 +328,8 @@
   Author                   = {Deitel, Paul e Harvey},
   Publisher                = {Pearson},
   Year                     = {2009},
-%   Address                  = {Cidade},
-  Edition                  = {8},
+  Address                  = {Cidade},
+  Edition                  = {8}
 %   Page                     = {5},
 %   Timestamp                = {2014.09.24}
 }
@@ -345,7 +341,7 @@
   Year                     = {2014},
   Address                  = {S\~ao Paulo},
   Edition                  = {1},
-  Page                     = {12},
+  Page                     = {12}
 %   Timestamp                = {2014.09.24}
 }
 
@@ -370,7 +366,6 @@
   Number                   = {37},
 %   Pages                    = {12--16},
 %   Volume                   = {2},
-
   Mounth                   = {junho},
 %   Subtitle                 = {proposta metodol\'{o}gica},
   Timestamp                = {2017.06.27}
