--- a/ifpb-tcc.tex
+++ b/ifpb-tcc.tex
@@ -66,7 +66,7 @@
 \postextual
 % INSERE ELEMENTOS PÓS-TEXTUAIS
 \include{estrutura/pos-textuais/referencias}           			   % Referências
-\include{estrutura/pos-textuais/apendices}             			   % Apêndices
+% \include{estrutura/pos-textuais/apendices}             			   % Apêndices
 \include{estrutura/pos-textuais/anexos}               			   % Anexos
 
 \end{document}
