--- a/estrutura/textuais/desenvolvimento/atividades-realizadas.tex
+++ b/estrutura/textuais/desenvolvimento/atividades-realizadas.tex
@@ -82,7 +82,7 @@ Na \autoref{fig:figura-atividade8940} a seguir é possível ver uma tarefa espec
 
 
 \subsection{Criando as tabelas no banco}
-\label{sbs:desenvolvimentoMapeamento}
+\label{sbs:desenvolvimentoTabelas}
 
 Com o domínio do problema já definido são então criadas as tabelas do banco de dados com seus atributos, relacionamentos e restrições.
 Scripts em SQL são gerados, conforme exemplo da \autoref{fig:figura-scriptSQL}, para cada tabela, levando em consideração as particularidades da sintaxe SQL para o banco de dados Oracle. 
