--- a/estrutura/pre-textuais/listas/lista-siglas.tex
+++ b/estrutura/pre-textuais/listas/lista-siglas.tex
@@ -13,6 +13,9 @@
     \item[DBA] DataBase Administrator
     \item[JSF] JavaServer Faces
     \item[SVN] Apache Subversion
+    \item[MVC] Model View Control
+    \item[POJO] Plain Old Java Objects
+    \item[IDE] 
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
