--- a/estrutura/textuais/desenvolvimento/atividades-realizadas.tex
+++ b/estrutura/textuais/desenvolvimento/atividades-realizadas.tex
@@ -108,3 +108,6 @@ Com as tabelas já criadas e relacionadas, começa-se a codificação propriamen
     \label{fig:figura-entidade}
 \end{figure}
 
+\subsection{Injeção de dependência no controller }
+
+As aplicações em JEE obedecem o padrão de projeto denominado MVC. 
