--- a/estrutura/pre-textuais/listas/lista-siglas.tex
+++ b/estrutura/pre-textuais/listas/lista-siglas.tex
@@ -15,7 +15,9 @@
     \item[SVN] Apache Subversion
     \item[MVC] Model View Control
     \item[POJO] Plain Old Java Objects
-    \item[IDE] 
+    \item[IDE]
+    \item[COSEG]
+    \item[SETRAN] 
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
