--- a/base-referencias.bib
+++ b/base-referencias.bib
@@ -358,3 +358,12 @@
   Mounth                   = {junho},
   Timestamp                = {2017.06.27}
 }
+
+@Misc{WikipediaSpring2017,
+  Title                    = {Spring Framework},
+  Author                   = {Wikipedia},
+  Year                     = {2017},
+  Timestamp                = {2017.09.04},
+  Url                      = {https://pt.wikipedia.org/wiki/Spring_Framework},
+  Urlaccessdate            = {8 de fevereiro de 2019}
+}
