--- a/estrutura/pre-textuais/listas/lista-siglas.tex
+++ b/estrutura/pre-textuais/listas/lista-siglas.tex
@@ -1,12 +1,10 @@
 % LISTA DE ABREVIATURAS E SIGLAS----------------------------------------------------------
 
 \begin{siglas}
-    \item[ABNT] Associação Brasileira de Normas Técnicas
-    \item[DECOM] Departamento de Computação
     \item[PDS] Plano de Desenvolvimento de Software
     \item[MODUS] Modelo de Desenvolvimento de Software
-    \item[SEDES] Seção de Desenvolvimento de Sistemas
-    \item[SISBAN]Seção de Impantação de Sistemas e Banco de dados
+    \item[SEDES] Seção de Análise e Desenvolvimento de Sistemas
+    \item[SISBAN]Seção de Implantação de Sistemas e Bancos de Dados
     \item[TRE-PB] Tribunal Regional Eleitoral da Paraíba
     \item[IFPB] Instituto Federal de Educação da Paraíba
     \item[SQL] Structured Query Language
@@ -15,9 +13,11 @@
     \item[SVN] Apache Subversion
     \item[MVC] Model View Control
     \item[POJO] Plain Old Java Objects
-    \item[IDE]
-    \item[COSEG]
-    \item[SETRAN] 
+    \item[IDE] 
+    \item[COSIS] Coordenadoria de Sistemas
+    \item[COSEG] Coordenadoria de Serviços Gerais
+    \item[SETRAN] Seção de Transportes
+    \item[JEE] Java Enterprise Edition  
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
