--- a/base-referencias.bib
+++ b/base-referencias.bib
@@ -337,6 +337,17 @@
   Page                     = {12}
 }
 
+@Book{Sato2014,
+  Title                    = {DevOps},
+  Subtitle                 = {Na prática: entrega de software confiável e automatizada},
+  Author                   = {Danilo Sato},
+  Publisher                = {Casa do C\'odigo},
+  Year                     = {2014},
+  Address                  = {S\~ao Paulo},
+  Edition                  = {1},
+  Page                     = {19}
+}
+
 @Manual{Civici2015,
   Title                    = {Primefaces User Guide 5.2},
   Author                   = {Ca\~gatay Civici},
