--- a/estrutura/pre-textuais/listas/lista-siglas.tex
+++ b/estrutura/pre-textuais/listas/lista-siglas.tex
@@ -17,7 +17,8 @@
     \item[COSIS] Coordenadoria de Sistemas
     \item[COSEG] Coordenadoria de Serviços Gerais
     \item[SETRAN] Seção de Transportes
-    \item[JEE] Java Enterprise Edition  
+    \item[JEE] Java Enterprise Edition
+    \item[LDAP]   
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
