--- a/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
+++ b/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
@@ -67,3 +67,6 @@ A abstração do JPA é a sua maior característica, permitindo que o programado
 \section{JasperReports}
 \label{sec:embasamentoTeoricoJasper}
 
+\section{Tomcat}
+\label{sec:embasamentoTeoricoTomcat}
+
