--- a/estrutura/textuais/conclusao.tex
+++ b/estrutura/textuais/conclusao.tex
@@ -1,16 +1,13 @@
-% CONCLUSÃO--------------------------------------------------------------------
+% CONSIDERAÇÕES FINAIS--------------------------------------------------------------------
 
-\chapter{CONCLUSÃO}
-\label{chap:conclusao}
+\chapter{Considerações Finais}
+\label{chap:consideracoesFinais}
 
-Parte final do texto, na qual se apresentam as conclusões do trabalho acadêmico. É importante fazer uma análise crítica do trabalho, destacando os principais resultados e as contribuições do trabalho para a área de pesquisa.
 
-\section{TRABALHOS FUTUROS}
-\label{sec:trabalhosFuturos}
+A experiência de estágio no TRE-PB adicionou propriedade aos conhecimentos adquiridos ao longo da minha jornada como aluno e desenvolvedor de sistemas para internet. 
+Durante os dois anos de estágio fui incluído em uma rotina de trabalho equivalente as teorias e práticas vistas e desenvolvidas em sala de aula. 
+Fui amparado por excelentes profissionais, sempre dispostos a dar o seu melhor tanto para o ambiente de trabalho quanto para uma sociedade melhor e mais justa.
 
-Também deve indicar, se possível e/ou conveniente, como o trabalho pode ser estendido ou aprimorado.
+Assistir uma boa aula, realizar os exercícios em sala e ainda repetir todo esse processo durante o estágio proporcionou, sem dúvidas, um crescimento imensurável ao meu intelecto. Tive a oportunidade de participar de alguns projetos, dentre eles o \imprimirtitulo \space, o qual participei já na primeira reunião até seu encerramento. Poder opinar, dar sugestões, incluir classes inteiras ao projeto, compilar o código e realizar o deploy da aplicação, até mesmo em produção me fez acreditar que eu estava no caminho correto e que seria possível me apresentar diante de qualquer empresa como um verdadeiro profissional.
 
-\section{CONSIDERAÇÕES FINAIS}
-\label{sec:consideracoesFinais}
-
-Encerramento do trabalho acadêmico.
+Durante o projeto me deparei com situações de grande dificuldade, as vezes por não conseguir codificar a solução do problema, outras pelo tamanho da responsabilidade envolvida. ... 
