--- a/estrutura/textuais/conclusao.tex
+++ b/estrutura/textuais/conclusao.tex
@@ -10,4 +10,7 @@ Fui amparado por excelentes profissionais, sempre dispostos a dar o seu melhor t
 
 Assistir uma boa aula, realizar os exercícios em sala e ainda repetir todo esse processo durante o estágio proporcionou, sem dúvidas, um crescimento imensurável ao meu intelecto. Tive a oportunidade de participar de alguns projetos, dentre eles o \imprimirtitulo \space, o qual participei já na primeira reunião até seu encerramento. Poder opinar, dar sugestões, incluir classes inteiras ao projeto, compilar o código e realizar o deploy da aplicação, até mesmo em produção me fez acreditar que eu estava no caminho correto e que seria possível me apresentar diante de qualquer empresa como um verdadeiro profissional.
 
-Durante o projeto me deparei com situações de grande dificuldade, as vezes por não conseguir codificar a solução do problema, outras pelo tamanho da responsabilidade envolvida. ... 
+Durante o projeto me deparei com situações de grande dificuldade, as vezes por não conseguir codificar a solução do problema, outras pelo tamanho da responsabilidade envolvida. Sempre fui encorajado a encontrar a solução, investigar, as vezes por dias.
+Fiz parte de uma equipe sempre pronta e disposta a resolver suas demandas de trabalho, esclarecer dúvidas, sempre discutindo possibilidades de melhorar. Sinto orgulho em dizer que, durante meu estágio, todos os desenvolvedores efetivos do TRE-PB foram alunos IFPB.
+
+Saio satisfeito dessa jornada, sabendo que pude absorver o máximo do que foi exposto durante o curso e o estágio. Tratando-se de tecnologias, muito ainda é pouco. Tudo que aprendi e vivi serve apenas como base para minha carreira como desenvolvedor. Conquistei apenas a ponta do iceberg, tenho plena clareza que falta muito a aprender e evoluir ainda. 
